# html2image

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  html2image.py  pyproject.toml  requirements-test.txt  requirements.txt  usage.py
.github/: FUNDING.yml
.github/workflows/: main.yml
examples/: blue_background.css  blue_page.html  example.py  load_filestr_example.py  usage.py
html2image/: __init__.py  cli.py  html2image.py  html2image_cli.py  main.py
html2image/browsers/: browser.py  chrome.py  chrome_cdp.py  chromium.py  edge.py  firefox.py  firefox_cdp.py  search_utils.py
tests/: test_cli.py  test_main.py
